--- a/app/globals.css
+++ b/app/globals.css
@@ -73,6 +73,10 @@ body {
   box-shadow: 0 -4px 20px rgba(0, 0, 0, 0.1);
   border-radius: 50px 50px 0 0;
   margin-top: 50vh;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  background: rgba(255, 255, 255, 0.02);
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
 }
 
 @media print {
